--- a/dev/test.yml
+++ b/dev/test.yml
@@ -14,4 +14,6 @@ spec:
       sourceRef:
         kind: GitRepository
         name: repo-helm-chart
+  values:
+    fullnameOverride: testsouhir
       
