creatinh helm release

--- a/dev/test.yml
+++ b/dev/test.yml
@@ -15,5 +15,5 @@ spec:
         kind: GitRepository
         name: repo-helm-chart
   values:
-    fullnameOverride: testsouhir
+    fullnameOverride: testsouhirr
       
